k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: counter-auth
spec:
  basicAuth:
    secret: counter-auth
