k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-server
spec:
  selector:
    app: counter-server
  ports:
    - port: 3000
      targetPort: 3000
