k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-counter-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: counter.walkerrout.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter-server
                port:
                  number: 3000
